<resources>
    <string name="app_name">Social Image</string>

    <!--general-->
    <string name="default_error_text">Bir hata meydana geldi</string>
    <string name="image_list_bottom_nav_view_title">Resimler Listesi</string>
    <string name="favorites_bottom_nav_view_title">Favoriler Listesi</string>
    <string name="settings_bottom_nav_view_title">Ayarlar</string>

    <!--loginFragment-->
    <string name="login_fragment_email_label">E-mail</string>
    <string name="login_fragment_email_et_hint">E-postanızı giriniz</string>
    <string name="login_fragment_password_label">Şifre</string>
    <string name="login_fragment_password_et_hint">Şifrenizi giriniz</string>
    <string name="login_fragment_forgot_password">Şifremi unuttum?</string>
    <string name="login_fragment_login_button">Giriş Yap</string>
    <string name="login_fragment_do_not_have_an_account">Hesabınız yok mu?</string>
    <string name="login_fragment_sign_up">Kayıt Ol</string>
    <string name="login_fragment_email_or_password_empty_error_message">E-posta ve şifre alanları boş bırakılamaz.</string>
    <string name="login_fragment_invalid_email">E-posta adresi yanlış biçimlendirilmiş.</string>
    <string name="login_fragment_wrong_password">Şifre yanlış.</string>
    <string name="login_fragment_user_not_found">Verilen e-posta adresine karşılık gelen bir kullanıcı yok.</string>
    <string name="login_fragment_mail_not_valid">Geçersiz e-posta adresi</string>
    <string name="login_fragment_remember_me_check_box_text">Beni hatırla</string>

    <!--registerFragment-->
    <string name="register_fragment_title">Hesap Oluştur</string>
    <string name="register_fragment_password_again_label">Şifre Tekrar</string>
    <string name="register_fragment_password_again_et_hint">Şifrenizi tekrar giriniz</string>
    <string name="register_fragment_register_button">Hesap Oluştur</string>
    <string name="register_fragment_already_have_an_account">Zaten bir hesabınız var mı?</string>
    <string name="register_fragment_sign_in">Giriş Yap</string>
    <string name="register_fragment_password_not_match">Girdiğiniz şifreler eşleşmiyor, lütfen kontrol edin.</string>
    <string name="register_fragment_email_already_in_use_error_message">Bu e-posta adresi zaten kullanımda. Lütfen başka bir e-posta adresi kullanın.</string>
    <string name="register_fragment_weak_password_error_message">Şifre çok zayıf. Lütfen daha güçlü bir şifre girin.</string>
    <string name="register_fragment_too_many_requests_error_message">Çok fazla başarısız giriş denemesi. Lütfen daha sonra tekrar deneyin.</string>

    <!--resetPasswordFragment-->
    <string name="reset_password_fragment_send_reset_password_button">Gönder</string>
    <string name="reset_password_fragment_mail_sent_message">E-Mail başarılı bir şekilde gönderildi, lütfen mail kutunuzu kontrol ediniz.</string>
    <string name="reset_password_fragment_email_empty_error_message">Lütfen E-posta adresinizi giriniz.</string>

    <!--imageListFragment-->
    <string name="image_list_fragment_search_edit_text_hint">Kullanıcı adı ara...</string>

    <!--detailFragment-->
    <string name="detail_fragment_title">Detay</string>

    <!--favoritesFragment-->
    <string name="favorites_fragment_title">Favoriler</string>

    <!--settingsFragment-->
    <string name="settings_fragment_title">Ayarlar</string>
    <string name="settings_fragment_privacy_policy">Gizlilik Politikası</string>
    <string name="settings_fragment_terms_of_service">Hizmet Şartları</string>
    <string name="settings_fragment_delete_account">Hesabı Sil</string>
    <string name="settings_fragment_logout">Çıkış Yap</string>
    <string name="settings_fragment_sure_to_logout">Çıkış yapmak istediğinizden emin misiniz?</string>
    <string name="settings_fragment_sure_to_delete_account_title">Hesabınızı silmek istediğinizden emin misiniz?</string>
    <string name="settings_fragment_sure_to_logout_yes_button_text">Evet</string>
    <string name="settings_fragment_sure_to_logout_no_button_text">Hayır</string>
    <string name="settings_fragment_relogin_before_delete_account_text">Güvenliğiniz için hesabınızı silmeden önce tekrar giriş yapmanız gerekiyor.</string>
    <string name="settings_fragment_delete_account_process_successful_text">Hesap silme işlemi başarılı oldu.</string>

</resources>