<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:background="@drawable/background_navy_blue_with_35dp_radius"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSureToDoTitle"
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_marginHorizontal="@dimen/_24sdp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semi_bold"
        android:textSize="18sp"
        android:text="@string/settings_fragment_sure_to_logout"
        android:layout_marginTop="@dimen/_24sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_26sdp"
        android:gravity="center_horizontal"
        android:layout_marginBottom="@dimen/_24sdp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/settings_fragment_sure_to_logout_no_button_text"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/_16sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterPasswordAgain" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnYes"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/settings_fragment_sure_to_logout_yes_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRegisterPasswordAgain" />

    </LinearLayout>

</LinearLayout>