<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/haiti"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.ResetPasswordFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:text="@string/register_fragment_title"
        android:textColor="@color/white"
        android:textSize="@dimen/large_text_size"
        app:layout_constraintTop_toTopOf="@+id/ivBackIcon"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivBackIcon"
        android:layout_width="@dimen/_18sdp"
        android:layout_height="@dimen/_24sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ivMailIcon"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:src="@drawable/ic_login_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBackIcon" />

    <TextView
        android:id="@+id/tvLoginMailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:fontFamily="@font/poppins_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/login_fragment_email_label"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintTop_toTopOf="@+id/ivMailIcon"
        app:layout_constraintBottom_toBottomOf="@+id/ivMailIcon"
        app:layout_constraintStart_toEndOf="@+id/ivMailIcon" />

    <EditText
        android:id="@+id/etResetPasswordMail"
        android:layout_width="0dp"
        android:layout_height="@dimen/_44sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/edit_text_bg"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/login_fragment_email_et_hint"
        android:maxLength="320"
        android:paddingHorizontal="@dimen/_16sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/dark_gray"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMailIcon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendResetPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:background="@drawable/background_button"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/reset_password_fragment_send_reset_password_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>